--- a/templates/index.html
+++ b/templates/index.html
@@ -132,19 +132,19 @@
             <div class="row">
          
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bx bx-receipt"></i>
+              <i class="bi bi-receipt"></i>
               <h4>Know peeps with tweets </h4>
-              <p>Analyses Real-time Tweets and shows opinions</p>
+              <p>Analyse Real-time Tweets and gather opinions</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bx bx-images"></i>
-              <h4>Check out the pics</h4>
+              <i class="bi bi-images"></i>
+              <h4>Pictorial Representation</h4>
               <p>Easy to understand graphs and charts.</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bx bx-shield"></i>
+              <i class="bi bi-shield"></i>
               <h4>Keep up!</h4>
-              <p>Keep up with trending times and topics. And feel free to leave your opinion about us in the review section. Thanks :)</p>
+              <p>Keep up with trending times and topics without worry! Searches are private and secured :)</p>
             </div>
           </div>
         </div>
