--- a/static/css/style.css
+++ b/static/css/style.css
@@ -167,6 +167,27 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.analyse-btn {
+  color: black;
+  padding: 7px 25px 8px 25px;
+  white-space: nowrap;
+  transition: 0.3s;
+  font-size: 14px;
+  font-weight: bold;
+  display: inline-block;
+}
+.analyse-btn:hover {
+  color: black;
+  background-color: grey;
+  border: 1px solid black;
+}
+@media (max-width: 992px) {
+  .analyse-btn {
+    padding: 7px 20px 8px 20px;
+    margin-right: 15px;
+  }
+}
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
