--- a/static/css/style.css
+++ b/static/css/style.css
@@ -175,11 +175,12 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
   font-weight: bold;
   display: inline-block;
+  background-color: white;
+  border: 1px solid black;
 }
 .analyse-btn:hover {
   color: black;
-  background-color: grey;
-  border: 1px solid black;
+  background-color: #ffc451;
 }
 @media (max-width: 992px) {
   .analyse-btn {
