--- a/templates/piechart2.html
+++ b/templates/piechart2.html
@@ -34,20 +34,6 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-  <style>
-    .column {
-  float: left;
-  width: 50%;
-  padding: 5px;
-}
-
-/* Clear floats after image containers */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-  </style>
 </head>
 
 <body>
@@ -83,14 +69,7 @@
       <div>
         <h3 style="color: black; text-align: center;font-size:25px; border-radius: 25px;">Visual Representation</h3>
       </div>
-      <div class="row">
-        <div class="column">
-          <img src="static/img/plots/plot1.png" alt="Snow" style="width:100%">
-        </div>
-        <div class="column">
-          <img src="static/img/plots/plot2.png" alt="Snow" style="width:100%">
-        </div>
-      </div>
+        <img src="static/img/plots/plot2.png" >
      </div>
      <br><br>
   </main><!-- End #main -->
